src/test/deca/context/invalid/bad_condition.deca
// Description:
//    int = float ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
	int x;
	if (x) {
		println("ok");
	}
}

